fix: horizontal scroll fix

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,4 +1,4 @@
 .main {
-    max-width: 1280px;
+    max-width: 100%;
     margin: 0 auto;
 }
